<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:paddingTop="10dip"
	android:paddingRight="5dip"
	android:paddingBottom="10dip"
	android:orientation="vertical" >
	   
	<TextView
	    style="@style/dogName"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:textSize="@dimen/textM"
		android:id="@+id/dogName"
		android:text="@string/dogName" />
	
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:paddingBottom="2dip"
		android:textSize="@dimen/textS"
		android:textColor="#000"
		android:id="@+id/dogBreed"
		android:text="@string/dogBreed" />

	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:paddingBottom="2dip"
	    android:orientation="horizontal" >
		<TextView
		       android:layout_width="wrap_content"
		       android:layout_height="wrap_content"
		       android:textSize="@dimen/textS"
		       android:textColor="#000"
		       android:id="@+id/dogAge"
		       android:text="@string/dogAge" />
	
	    <TextView
		       android:layout_width="wrap_content"
		       android:layout_height="wrap_content"
		       android:paddingLeft="5dip"
		       android:textSize="@dimen/textS"
		       android:textColor="#000"
		       android:id="@+id/dogSex"
		       android:text="@string/dogSex" />
    </LinearLayout>

    <TextView
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:textSize="@dimen/textS"
	       android:textColor="#000"
	       android:id="@+id/dogBC"
	       android:text="@string/dogBC" />
	
</LinearLayout>
