<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:gravity="center"
	android:paddingTop="10dip"
	android:paddingLeft="10dip"
	android:paddingBottom="10dip"
	android:paddingRight="5dip"
	android:orientation="vertical">
	
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dip" >
        
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="@dimen/textM"
			android:textColor="#000"
			android:id="@+id/preFoodTime"
			android:text="@string/preFoodTime" />
	
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingLeft="10dip"
			android:textSize="@dimen/textM"
			android:textColor="#000"
			android:id="@+id/preWeight"
			android:text="@string/preWeight" />

	</LinearLayout>
	
	<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dip"
            android:textSize="@dimen/textS"
            android:textColor="#000"
            android:id="@+id/preFoodName"
            android:text="@string/preFoodName" />
	
	<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textS"
            android:textColor="#000"
            android:id="@+id/preFoodAmount"
            android:text="@string/preFoodAmount" />
	
</LinearLayout>