<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:fadeScrollbars="false"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f4ede4" 
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >
    
    <requestFocus />
    
    <include layout="@layout/titlebar"/>
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/header"
        android:text="@string/headerIW" />
    
    <ImageView
		android:id="@+id/topImage"
		android:layout_width="150dp"
		android:layout_height="150dp"
		android:layout_margin="10dp"
		android:layout_gravity="center_horizontal"
		android:src="@drawable/dog"
		android:contentDescription="top image" />
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:orientation="vertical" >
	        
	    <TextView
	        android:id="@+id/IWDateTime"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:textColor="#000"
	        android:text="12/3 12:34" />
	    <TextView
	        android:id="@+id/IWDogName"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginTop="5dp"
	        android:textColor="#000"
	        android:text="あああ（犬の名前）" />
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginTop="5dp"
	        android:textColor="#000"
	        android:text="@string/IWIs" />
    
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:orientation="horizontal" >
        
        <EditText
            android:id="@+id/IWWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textColor="#000"
            android:text="@string/unitKg" />
        
    </LinearLayout>
    
    <Button 
        android:id="@+id/IWBluetoothBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:text="@string/btnBluetooth" />
    
    <Button
        android:id="@+id/IWSaveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:text="@string/btnSave" />
    
</LinearLayout>

</ScrollView>
